[gd_scene load_steps=14 format=3 uid="uid://qtdqnss7q8n8"]

[ext_resource type="Script" path="res://scripts/UIController.gd" id="1_xl5gl"]
[ext_resource type="Texture2D" uid="uid://xq0oblu70xp4" path="res://sprites/ForgemasterUI_HPBarUnderlay.png" id="2_0vasr"]
[ext_resource type="Texture2D" uid="uid://e7c8d1g4u1em" path="res://sprites/ForgemasterUI_EXPBarOverlay.png" id="2_ipctp"]
[ext_resource type="Texture2D" uid="uid://dgouaydun50r0" path="res://sprites/ForgemasterUI_EXPBarUnderlay.png" id="2_otdyb"]
[ext_resource type="Texture2D" uid="uid://bxm7tpdoaofl3" path="res://sprites/ForgemasterUI_EXPBarInlay.png" id="3_7wdfo"]
[ext_resource type="Texture2D" uid="uid://dhuse22q56mvm" path="res://sprites/ForgemasterUI_HPBarOverlay.png" id="3_lokie"]
[ext_resource type="Texture2D" uid="uid://cjt4r4mv3pldr" path="res://sprites/kenney/fantasy-borders/panel-transparent-center-001.png" id="4_5pnwe"]
[ext_resource type="Texture2D" uid="uid://dqepqmsfrlm8x" path="res://sprites/ForgemasterUI_HPBarInlay.png" id="4_8v0kt"]
[ext_resource type="Texture2D" uid="uid://bvl00ob8p2yqo" path="res://sprites/skull16px.png" id="4_m81yg"]

[sub_resource type="LabelSettings" id="LabelSettings_3i6i0"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_1kmpv"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yx4e1"]
font_size = 48
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yxynw"]
font_size = 24

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xl5gl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HPBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -292.0
offset_top = -75.0
offset_right = 292.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
texture_under = ExtResource("2_0vasr")
texture_over = ExtResource("3_lokie")
texture_progress = ExtResource("4_8v0kt")

[node name="HPLabel" type="Label" parent="CanvasLayer/HPBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -5.0
offset_right = 20.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
label_settings = SubResource("LabelSettings_3i6i0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EXPBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -628.0
offset_top = -53.0
offset_right = 628.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
step = 0.1
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("2_otdyb")
texture_over = ExtResource("2_ipctp")
texture_progress = ExtResource("3_7wdfo")

[node name="LevelLabel" type="Label" parent="CanvasLayer/EXPBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_1kmpv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = 640.0
offset_bottom = 91.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="GameTimerLabel" type="Label" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
offset_left = 579.0
offset_top = 12.0
offset_right = 700.0
offset_bottom = 79.0
text = "00:00"
label_settings = SubResource("LabelSettings_yx4e1")

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -38.0
offset_right = 78.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_5pnwe")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="KillCountLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -208.0
offset_top = 28.0
offset_right = -68.0
offset_bottom = 62.0
grow_horizontal = 0
text = "1000000000"
label_settings = SubResource("LabelSettings_yxynw")
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/KillCountLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -20.0
offset_right = 41.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("4_m81yg")
